fix(feed) : visibilité texte

--- a/dev_project/public/css/style_feed.css
+++ b/dev_project/public/css/style_feed.css
@@ -244,7 +244,7 @@ main .defaultBlock:last-child::after {
 .date {
   margin-top: 10px;
   color: #ffa319;
-  text-shadow: 0px 0px 5px #00000099;
+  text-shadow: 0px 0px 2px #00000099;
 }
 
 .descMore {
